--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,17 +12,19 @@
         </div>
         <nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation">
             <ul class="nav navbar-nav">
+                
                 <li>
                     <a href="{{ '/' | prepend: site.baseurl }}">主页</a>
                 </li>
                 <li>
-                    <a href="{{ '/categories/' | prepend: site.baseurl }}">按分类查看</a>
-                </li>
+                        <a href="{{ '/categories/' | prepend: site.baseurl }}">分类</a>
+                    </li>
+                
                 <li>
                     <a href="{{ '/tag' | prepend: site.baseurl }}">按标签查看</a>
                 </li>
             </ul>
-            <ul class="nav navbar-nav navbar-right">
+            <!-- <ul class="nav navbar-nav navbar-right">
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">关于<b class="caret"></b></a>
                     <ul class="dropdown-menu">
@@ -36,7 +38,23 @@
                         <li><a rel="nofollow" target="_blank" href="https://github.com/luoyan35714/LessOrMore.git">本项目</a></li>
                     </ul>
                 </li>
-            </ul>
+            </ul> -->
+            <div id="search-container" style="float:right; position:relative; display:inline-block;">
+                <input type="text" id="search-input" placeholder="search...">
+                <ul id="results-container"></ul>
+            </div>
+            <script src="{{ '/styles/js/simple-jekyll-search.min.js'  | prepend: site.baseurl }}"></script>
+            <script>
+                SimpleJekyllSearch({
+                    searchInput: document.getElementById('search-input'),
+                    resultsContainer: document.getElementById('results-container'),
+                    json: '/search.json',
+                    searchResultTemplate: '<li><a href="{url}" title="{desc}">{title}</a></li>', // 文章列表模板
+                    noResultsText: '没有搜索到文章', // 无搜索数据提示语
+                    limit: 20, // 返回最大文章数
+                    fuzzy: true // 是否模糊匹配
+                })
+            </script>
         </nav>
     </div>
 </header>
