--- a/_includes/docs_header.html
+++ b/_includes/docs_header.html
@@ -1,14 +1,21 @@
+{% if page.title%}
+<div class="docs-header" id="content">
+		<div class="container">
+			
+		</div>
+</div>
+{% else %}
 <div class="docs-header" id="content">
   <div class="container">
-  	{% if page.title%}
+  	
   		<!--
 		    <h1>{{ page.title }}</h1>
 		    <p>Post on {{ page.date | date: "%b %d, %Y" }} by <a href="/about">{{ site.author }}</a></p>
 		-->
-		    <h1>{{ site.motto }}</h1>
-    {% else %}
+    
 	    <h1>{{ site.name }}</h1>
 	    <p>{{ site.description }}</p>
-    {% endif %}
+    
   </div>
 </div>
+{% endif %}
